[gd_scene load_steps=6 format=3 uid="uid://c43fg3lqtny2o"]

[ext_resource type="Script" path="res://scripts/menus/you_died.gd" id="1_aw35k"]
[ext_resource type="Theme" uid="uid://cmqrhye3ypeck" path="res://scenes/menus/you_died/YouDiedUI.tres" id="2_4182e"]
[ext_resource type="PackedScene" uid="uid://c2itqlh42qfb8" path="res://scenes/menus/main_menu/fade_transition.tscn" id="4_bbn68"]
[ext_resource type="AudioStream" uid="uid://cfiueghlyr0hy" path="res://scenes/menus/main_menu/Mian_menu.ogg" id="5_ck0b8"]
[ext_resource type="PackedScene" uid="uid://fq3wolu7mpu2" path="res://scenes/menus/main_menu/options_menu.tscn" id="6_6v0ij"]

[node name="YouDied" type="Node2D"]
script = ExtResource("1_aw35k")

[node name="Main_Background" type="ColorRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
color = Color(0.0313726, 0.0313726, 0.0941176, 1)

[node name="Main_Button_Container" type="VBoxContainer" parent="."]
offset_left = 400.0
offset_top = 300.0
offset_right = 491.0
offset_bottom = 371.0
scale = Vector2(1.825, 1.825)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_4182e")

[node name="TryAgain" type="Button" parent="Main_Button_Container"]
layout_mode = 2
size_flags_vertical = 3
text = "Try Again"

[node name="Options" type="Button" parent="Main_Button_Container"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="MainMenu" type="Button" parent="Main_Button_Container"]
layout_mode = 2
size_flags_vertical = 3
text = "Main Menu"

[node name="Fade_Transition" parent="." instance=ExtResource("4_bbn68")]
visible = false
offset_right = 958.0
offset_bottom = 533.0
scale = Vector2(1, 1)
mouse_filter = 2

[node name="Fade_Timer" type="Timer" parent="Fade_Transition"]

[node name="Main_Menu_Theme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ck0b8")
bus = &"Music"
parameters/looping = true

[node name="OptionsMenu" parent="." instance=ExtResource("6_6v0ij")]
visible = false

[connection signal="pressed" from="Main_Button_Container/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="Main_Button_Container/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main_Button_Container/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="timeout" from="Fade_Transition/Fade_Timer" to="." method="_on_fade_timer_timeout"]

[editable path="Fade_Transition"]
